force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/Complaints_Tracker__c.object-meta.xml
<CustomObject>
    <label>Complaints Tracker</label>
    <nameField>
        <displayFormat>CTR-{0000}</displayFormat>
        <label>Complaints Tracker Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>