force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/A_C_Head__c.field-meta.xml
<CustomField>
    <fullName>A_C_Head__c</fullName>
    <label>A/C Head</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEK</fullName>
            </value>
            <value>
                <fullName>GD</fullName>
            </value>
            <value>
                <fullName>KNS</fullName>
            </value>
            <value>
                <fullName>KSB</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>NR</fullName>
            </value>
            <value>
                <fullName>PVS</fullName>
            </value>
            <value>
                <fullName>TSR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>