force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <length>100</length>
    <type>Text</type>
</CustomField>