force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Avg_Load_Carried__c.field-meta.xml
<CustomField>
    <fullName>Avg_Load_Carried__c</fullName>
    <label>Avg Load Carried</label>
    <length>100</length>
    <type>Text</type>
</CustomField>