force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Avg_Speed__c.field-meta.xml
<CustomField>
    <fullName>Avg_Speed__c</fullName>
    <label>Avg Speed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>