force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/BL_NM__c.field-meta.xml
<CustomField>
    <fullName>BL_NM__c</fullName>
    <formula>TEXT( Product__r.NM_Bl__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BL/NM</label>
    <type>Text</type>
</CustomField>