force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Brand1__c.field-meta.xml
<CustomField>
    <fullName>Brand1__c</fullName>
    <label>Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>