force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emerald</fullName>
            </value>
            <value>
                <fullName>Empower</fullName>
            </value>
            <value>
                <fullName>Flap</fullName>
            </value>
            <value>
                <fullName>GGRK</fullName>
            </value>
            <value>
                <fullName>Greckster</fullName>
            </value>
            <value>
                <fullName>SSR</fullName>
            </value>
            <value>
                <fullName>Tube</fullName>
            </value>
            <value>
                <fullName>WIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>