force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Claim_No2__c.field-meta.xml
<CustomField>
    <fullName>Claim_No2__c</fullName>
    <description>Complaint Claim Number2</description>
    <label>Claim No2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>