force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Claim_No__c.field-meta.xml
<CustomField>
    <fullName>Claim_No__c</fullName>
    <description>Complaint Claim Number</description>
    <label>Claim No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>