force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Claim_Qty__c.field-meta.xml
<CustomField>
    <fullName>Claim_Qty__c</fullName>
    <description>Quantity of the Claim</description>
    <label>Claim Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>