force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Claim_Tyre__c.field-meta.xml
<CustomField>
    <fullName>Claim_Tyre__c</fullName>
    <label>Claim Tyre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>