force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Complaint_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Receipt_Date__c</fullName>
    <description>Date of the Complaint Receipt</description>
    <label>Complaint Receipt Date</label>
    <type>Date</type>
</CustomField>