force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Cust_code__c.field-meta.xml
<CustomField>
    <fullName>Cust_code__c</fullName>
    <formula>Customer_Name__r.SAP_Number__c</formula>
    <label>Cust code</label>
    <type>Text</type>
</CustomField>