force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Complaints Trackers</relationshipLabel>
    <relationshipName>ComplaintTracker</relationshipName>
    <type>Lookup</type>
</CustomField>