force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <description>End Customer</description>
    <label>End Customer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>