force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>