force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Equipment_Wheel_Rim_Status__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Wheel_Rim_Status__c</fullName>
    <label>Equipment/Wheel Rim Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>