force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Executive_Remarks_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Executive_Remarks_Recommendations__c</fullName>
    <label>Executive Remarks/Recommendations</label>
    <type>TextArea</type>
</CustomField>