force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Failed_Tyre_Position__c.field-meta.xml
<CustomField>
    <fullName>Failed_Tyre_Position__c</fullName>
    <label>Failed Tyre Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>