force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/FOC_Approved_Qty__c.field-meta.xml
<CustomField>
    <fullName>FOC_Approved_Qty__c</fullName>
    <label>FOC Approved Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>