force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/FOC_Invoice_Basic_Value__c.field-meta.xml
<CustomField>
    <fullName>FOC_Invoice_Basic_Value__c</fullName>
    <label>FOC Invoice Basic Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>