force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/FOC_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>FOC_Invoice_Date__c</fullName>
    <label>FOC Invoice Date</label>
    <type>Date</type>
</CustomField>