force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/FOC_Invoice_Net_Value_INCL_GST__c.field-meta.xml
<CustomField>
    <fullName>FOC_Invoice_Net_Value_INCL_GST__c</fullName>
    <label>FOC Invoice Net Value(INCL GST)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>