force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/FOC_Repl__c.field-meta.xml
<CustomField>
    <fullName>FOC_Repl__c</fullName>
    <label>FOC Repl Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Details Awaited</fullName>
            </value>
            <value>
                <fullName>Mtl Return</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>