force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/FOC_Replacement_Approved_Status__c.field-meta.xml
<CustomField>
    <fullName>FOC_Replacement_Approved_Status__c</fullName>
    <label>FOC Replacement Approved Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>