force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/FOC_SO_Date__c.field-meta.xml
<CustomField>
    <fullName>FOC_SO_Date__c</fullName>
    <label>FOC-SO Date</label>
    <type>Date</type>
</CustomField>