force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/FOC_SO_NO_Reference__c.field-meta.xml
<CustomField>
    <fullName>FOC_SO_NO_Reference__c</fullName>
    <label>FOC-SO NO Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>