force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/FOC_Tyre_Desp_Status__c.field-meta.xml
<CustomField>
    <fullName>FOC_Tyre_Desp_Status__c</fullName>
    <label>FOC Tyre Desp Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Despatched</fullName>
            </value>
            <value>
                <fullName>FOC PO Awaited</fullName>
            </value>
            <value>
                <fullName>NW-Closed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Cust Commn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>