force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/FOC_Tyre_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>FOC_Tyre_Invoice_Date__c</fullName>
    <label>FOC Tyre Invoice Date</label>
    <type>Date</type>
</CustomField>