force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/FOC_Tyre_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>FOC_Tyre_Invoice_No__c</fullName>
    <label>FOC Tyre Invoice No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>