force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Heat_Spot_On_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Heat_Spot_On_Equipment__c</fullName>
    <label>Heat Spot On Equipment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>