force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Id_Status__c.field-meta.xml
<CustomField>
    <fullName>Id_Status__c</fullName>
    <label>Id Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>