force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Marketing_Observations__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Observations__c</fullName>
    <label>Marketing Observations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WARRANTABLE</fullName>
            </value>
            <value>
                <fullName>NON WARRANTABLE - NO FOC REPL</fullName>
            </value>
            <value>
                <fullName>NON WARRANTABLE - Good will FOC REPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>