force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Marketing_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Remarks__c</fullName>
    <label>Marketing Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>