force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Max_Dist_Covered_At_A_Stretch__c.field-meta.xml
<CustomField>
    <fullName>Max_Dist_Covered_At_A_Stretch__c</fullName>
    <label>Max Dist Covered At A Stretch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>