force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Mktg__c.field-meta.xml
<CustomField>
    <fullName>Mktg__c</fullName>
    <label>Mktg Observation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Warrantable</fullName>
            </value>
            <value>
                <fullName>Cut Damage</fullName>
            </value>
            <value>
                <fullName>Competitors Brand</fullName>
            </value>
            <value>
                <fullName>CFIR Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>