force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Mode_Of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Communication__c</fullName>
    <label>Mode Of Communication</label>
    <length>100</length>
    <type>Text</type>
</CustomField>