force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Nature_Of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Complaint__c</fullName>
    <label>Nature Of Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abnormal Deflection</fullName>
            </value>
            <value>
                <fullName>Abnormal Noise</fullName>
            </value>
            <value>
                <fullName>Air Leakage</fullName>
            </value>
            <value>
                <fullName>Chipping</fullName>
            </value>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Fast Wear</fullName>
            </value>
            <value>
                <fullName>Fitment Related</fullName>
            </value>
            <value>
                <fullName>ID Damage</fullName>
            </value>
            <value>
                <fullName>ID Mismatch</fullName>
            </value>
            <value>
                <fullName>ID Slippage</fullName>
            </value>
            <value>
                <fullName>Radial Crack</fullName>
            </value>
            <value>
                <fullName>Rim Crack</fullName>
            </value>
            <value>
                <fullName>Seperation</fullName>
            </value>
            <value>
                <fullName>Side Wall Bulging</fullName>
            </value>
            <value>
                <fullName>Trail</fullName>
            </value>
            <value>
                <fullName>Wobbling</fullName>
            </value>
            <value>
                <fullName>Wrong Supply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>