force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Plant_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Plant_Remarks__c</fullName>
    <label>Plant Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>