force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Complaints Trackers</relationshipLabel>
    <relationshipName>Complaints_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>