force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Code of the Product</description>
    <label>Product Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>