force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Remarks_from_Mktg__c.field-meta.xml
<CustomField>
    <fullName>Remarks_from_Mktg__c</fullName>
    <label>Remarks from Mktg</label>
    <length>50</length>
    <type>Text</type>
</CustomField>