force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Root_Cause_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis__c</fullName>
    <label>Root Cause Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Attachment Provision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>