force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Sidewall_Status__c.field-meta.xml
<CustomField>
    <fullName>Sidewall_Status__c</fullName>
    <label>Sidewall Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>