force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Spot_Visit_Done__c.field-meta.xml
<CustomField>
    <fullName>Spot_Visit_Done__c</fullName>
    <label>Spot Visit Done</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>