force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Stencil_Availability__c.field-meta.xml
<CustomField>
    <fullName>Stencil_Availability__c</fullName>
    <label>Stencil Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Partly Available</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>