force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Surface_Condition__c.field-meta.xml
<CustomField>
    <fullName>Surface_Condition__c</fullName>
    <label>Surface Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>