force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Tread_Wear_Status__c.field-meta.xml
<CustomField>
    <fullName>Tread_Wear_Status__c</fullName>
    <label>Tread Wear Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>