force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Usage_Hours_Day__c.field-meta.xml
<CustomField>
    <fullName>Usage_Hours_Day__c</fullName>
    <label>Usage Hours/Day</label>
    <length>100</length>
    <type>Text</type>
</CustomField>