force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/User_Industry__c.field-meta.xml
<CustomField>
    <fullName>User_Industry__c</fullName>
    <label>User Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>