force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Workplace__c.field-meta.xml
<CustomField>
    <fullName>Workplace__c</fullName>
    <label>Workplace</label>
    <length>100</length>
    <type>Text</type>
</CustomField>