force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Workplace_Ambient_temperature__c.field-meta.xml
<CustomField>
    <fullName>Workplace_Ambient_temperature__c</fullName>
    <label>Workplace Ambient temperature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>