force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/fields/Workplace_Hazard__c.field-meta.xml
<CustomField>
    <fullName>Workplace_Hazard__c</fullName>
    <label>Workplace Hazard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rails</fullName>
            </value>
            <value>
                <fullName>Metal Ramp</fullName>
            </value>
            <value>
                <fullName>Littered Floor</fullName>
            </value>
            <value>
                <fullName>Metal Scrap</fullName>
            </value>
            <value>
                <fullName>Etc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>