force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Customer_Name__c</columns>
    <columns>Brand__c</columns>
    <columns>Nature_Of_Complaint__c</columns>
    <columns>Complaint_Receipt_Month__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Complaint_Receipt_Date__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>