force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Complaint_Receipt_Date__c</columns>
    <columns>Corrective_Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>