force-app/force-app/force-app/main/default/objects/Complaints_Tracker__c/listViews/My_Complaint_Tracker.listView-meta.xml
<ListView>
    <fullName>My_Complaint_Tracker</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Product__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Stencil_Availability__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Complaint Tracker</label>
</ListView>